b=27056 a=jar@netscape.com r=troy@netscape.com Change made by Vidur. Avoid notifications in the middle of a table row